--- a/client/stylesheets/css/admin.import.less
+++ b/client/stylesheets/css/admin.import.less
@@ -40,7 +40,7 @@ div.admin-index-wrapper {
 	}
 	.content-wrapper {
 		width:80%;
-		padding:0 20px;
+		margin-left:3%;
 
 		.admin-page-wrapper {
 			.admin-section.parent { border:1px solid @admin-colour-2; }
