--- a/client/stylesheets/css/custom.import.less
+++ b/client/stylesheets/css/custom.import.less
@@ -304,6 +304,7 @@ button.disabled { cursor:default;color:gray; background-color:lightgrey; }
 }
 
 // REGISTRATION CONFIRMATION
+.reg-verify-wrapper.overlay { position:absolute; left:0; right:0;} 
 .reg-verify-wrapper {
 	width:60%;
 	background-color:white;
@@ -793,7 +794,7 @@ button.disabled { cursor:default;color:gray; background-color:lightgrey; }
 // LOGIN
 @login-form-inset:25px;
 .login-wrapper {
-	width:20%;
+	width:400px;
 	background-color:white;
 	margin:115px auto 0;
 	box-shadow:0 4px 10px rgba(0,0,0,0.6);
