--- a/client/templates/auth/login.html
+++ b/client/templates/auth/login.html
@@ -62,7 +62,7 @@
 	{{#if currentUser}}
       <div class="user-logout-controls">
       	Logged in as 
-        <a href="{{#if isInRole 'admin'}}{{pathFor route='Profile_JS_Edit' _id=currentUser._id}}{{else}}{{pathFor route='Profile' _id=currentUser._id}}{{/if}}"><strong>{{#if currentUser.profile.personal_details}}{{currentUser.profile.personal_details.name}} {{currentUser.profile.personal_details.surname}}{{else}}{{currentUser.profile.company_details.name}}{{/if}}</strong></a>, 
+        <a href="{{#if isInRole 'admin'}}{{pathFor route='Profile_Admin_Edit' _id=currentUser._id}}{{else}}{{pathFor route='Profile' _id=currentUser._id}}{{/if}}"><strong>{{#if currentUser.profile.personal_details}}{{currentUser.profile.personal_details.name}} {{currentUser.profile.personal_details.surname}}{{else}}{{currentUser.profile.company_details.name}}{{/if}}</strong></a>, 
        <i><a href="" class="js-logout">Logout</a></i>
       </div>
     {{/if}}
