--- a/client/templates/profile/reg-process.html
+++ b/client/templates/profile/reg-process.html
@@ -1,6 +1,7 @@
 <template name="Registration_Conf">
-	<div class="registration-wrapper">
-		<div class="regconf-wrapper">
+
+		<div class="reg-verify-wrapper overlay">
+		<div class="close-overlay-wrapper js-close-overlay"><i class="glyphicon glyphicon-remove-circle"></i></div>
 			<div class="head">
 				<div class="confirmation-tick"><i class="glyphicon glyphicon-ok"></i></div>
 				<h2>Registration <strong>Part 1</strong> is complete!</h2>
@@ -16,7 +17,7 @@
 				</div>
 			</div>
 		</div>
-	</div>
+
 </template>
 
 <template name="Registration_Verification">
@@ -26,20 +27,20 @@
 				<div class="confirmation-tick"><i class="glyphicon glyphicon-ok"></i></div>
 				<h2>Registration is complete!</h2>
 			{{else}}
-				<div class="confirmation-tick bad"><i class="glyphicon glyphicon-remove"></i></div>
-				<h2>Registration <span style="text-decoration:underline;">is not</span> complete!</h2>
+				<div align="center">
+					{{> loading}}
+					Verifying your account...
+				</div>
 			{{/if}}
 		</div>
 		<div class="body">
-			<div class="descrp">
-				<h3>
-					{{#if complete}}
-						Your acccount has been <span style="text-decoration:underline;">successfully verified</span>. <br /><br />You can now login!
-					{{else}}
-						There was an error in verifying your account. <br />Please contact <strong>ToadIT</strong> support staff.
-					{{/if}}
-				</h3>
-			</div>
+			{{#if complete}}
+				<div class="descrp">
+					<h3>
+						Your acccount has been <span style="text-decoration:underline;">successfully verified</span>. <br /><br />You can now log in!
+					</h3>
+				</div>
+			{{/if}}
 			<div class="links">
 				<a href="{{pathFor route='Home'}}">Home</a> &bull; <a href="{{pathFor route='Login' _portal='job-seeker'}}">Job Seeker Login</a> &bull; <a href="{{pathFor route='Login' _portal='employer'}}">Employer Login</a>
 			</div>
