--- a/client/stylesheets/css/style.import.less
+++ b/client/stylesheets/css/style.import.less
@@ -53,11 +53,6 @@ article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
-input, textarea {
-  -webkit-appearance: none;
-  -webkit-border-radius: 0;
-	border-radius: 0; 
-}
 .clear {
 	clear:both;
 	display:block;
@@ -816,6 +811,15 @@ input#s {
 	background-color:					#f9f9f9;
 	border:								3px solid #dcdcdc;
 }
+
+.btn_admin {
+	-moz-box-shadow:					inset 0px 1px 0px 0px #ffffff;
+	-webkit-box-shadow:					inset 0px 1px 0px 0px #ffffff;
+	box-shadow:							inset 0px 1px 0px 0px #ffffff;
+	background-color:					rgba(255, 80, 80, 1);
+	border:								3px solid rgba(252, 2, 2, 1);
+}
+.btn_admin:hover { color: white; }
 
 .btn_about:hover {
 	background-color:					#e9e9e9;
