--- a/client/stylesheets/style.less
+++ b/client/stylesheets/style.less
@@ -1,3 +1,7 @@
+// Import Vendors
+@import "vendor/custom.bootstrap.mixins.import.less";
+@import "vendor/custom.bootstrap.import.less";
+
 //main style imports
 @import "css/style.import.less";
 @import "css/style2.import.less";
