Added deployment date to placed job seekers; Added email notification for within 3 month expiry dates on contracts; Changed navbar styling; Added vacancies to home page and a vacancies list; Only admins can search job seekers;

--- a/client/stylesheets/css/admin.import.less
+++ b/client/stylesheets/css/admin.import.less
@@ -1,5 +1,5 @@
 // Dimensions
-@adminIndex-width: 62%;
+@adminIndex-width: 950px;
 // Colours
 @admin-colour-1: rgba(108, 95, 73, 1);
 @admin-colour-2: rgba(65, 61, 60, 1);
